Prevent page break in table

--- a/courses/csc3102/style.css
+++ b/courses/csc3102/style.css
@@ -32,6 +32,7 @@ h1, h2, h3, h4, h5 {
 
 table {
 	border-collapse: collapse;
+	page-break-inside: avoid;
 }
 
 th, td {
